[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sunrock-testing"
version = "0.1.0"
description = "Python code used for testing the SUNROCK chip."
readme = "README.md"
license = {file = "LICENSE"}
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "isort",
    "isort[colors]",
    "mypy",
    "pylint",
    "pytest",
    "pytest-clarity",
    "ruff",
]

[project.scripts]
labtest = "labtest.labtest:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
skip_magic_trailing_comma = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
pydocstyle.convention = "google"
select = ["ALL"]
ignore = ["COM812", "D104", "RET505"]
