[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0",
]

[project]
dependencies = []
description = "Python code used for testing the SUNROCK chip."
name = "labtest"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "flake8-bugbear",
    "flake8-class-attributes-order",
    "flake8-comprehensions",
    "flake8-pytest-style",
    "flake8-use-fstring",
    "isort",
    "isort[colors]",
    "mypy",
    "pylint",
    "pyprojectsort",
    "pytest",
    "pytest-clarity",
    "ruff",
]

[project.scripts]
labtest = "labtest.labtest:main"

[tool.black]
skip_magic_trailing_comma = true

[tool.coverage.report]
exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.ruff]
src = [
    "src",
    "tests",
]

[tool.ruff.lint]
ignore = [
    "COM812",
    "D104",
    "ISC001",
    "RET505",
]
select = [
    "ALL",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.package-data]
labtest = [
    "py.typed",
]

[tool.setuptools.packages.find]
namespaces = false
where = [
    "src",
]
